# openml-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/openml_mcp_server/: __main__.py  server.py
src/openml_mcp_server/tools/: __init__.py  data.py
tests/: test_api.py
